feat: plugin showcase

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "dependencies": {
     "egg": "^1.7.0",
-    "egg-scripts": "^1.1.1"
+    "egg-scripts": "^1.1.1",
+    "egg-validate": "^1.0.0"
   },
   "devDependencies": {
     "autod": "^2.9.0",
